--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -146,6 +146,8 @@ header{
     display: flex;
     // align-items: center;
     justify-content: flex-end;
+    font-family: sans-serif;
+    
 }
 
 .login-signup * {
@@ -160,7 +162,7 @@ header{
     border:1px solid #03a87c;
     cursor: pointer;
     padding: 5px 16px;
-    font-size: 16px;
+    font-size: 14px;
     border-radius: 4px;
     
 }
@@ -172,7 +174,7 @@ header{
     border: 1px solid #03a87c;
     cursor: pointer;
     padding: 5px 16px;
-    font-size: 16px;
+    font-size: 14px;
     border-radius: 4px;
     
 }
@@ -185,7 +187,7 @@ header{
     color: #03a87c;
     cursor: pointer;
     padding: 0;
-    font-size: 16px;
+    font-size: 14px;
     
 }
 
